about page alignment fixed

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -8,12 +8,13 @@
 }
 
 .about-container {
-  max-width: 1000px;
+  width: 100%;
+  /* max-width: 1000px; */
   /* margin: auto; */
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   gap: 2rem;
   /* border: 1px solid red; */
 }
@@ -37,9 +38,12 @@
 }
 
 .about-text {
-  flex: 1;
-  min-width: 300px;
+  /* flex: 1; */
+  /* min-width: 300px; */
+  width: 50%; 
   font-family: "Nunito", sans-serif;
+  /* border: 1px solid red; */
+
 }
 .about h2 {
   font-size: 2.5rem;
@@ -50,7 +54,7 @@
   line-height: 1.7;
   margin-bottom: 1rem;
   text-align: justify;
-  width: 80%;
+  /* width: 80%; */
 }
 
 .resume-button {
@@ -100,7 +104,6 @@
   }
 }
 
- 
 @media (max-width: 768px) {
   .about-container {
     flex-direction: column;
@@ -108,6 +111,7 @@
   }
   .about-text {
     padding: 0 1rem;
+    width: 90%;
   }
   .about p {
     width: 100%;
